# Difference-generator

./: .coverage  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gen_diff/: __init__.py  constants.py  diff_output.py  diff_plain.py  engine.py  generate_diff.py  help.py  parsers.py
gen_diff/formatters/: __init__.py  json_view.py  plain.py  str_dict.py  str_view.py  text_view.py  to_json.py
gen_diff/scripts/: diff_output.py  diff_plain.py  gendiff.py
tests/: test_gendiff_plain.py
tests/fixtures/: complex_after.yml  complex_before.json  complex_before.yml  json_result.json  recursion_result.txt  recursion_result_yml.txt  result.txt  result2.txt  text_result.txt
