[tool.poetry]
name = "YuliaZZZ_Difference_generator"
version = "0.1.0"
description = ""
authors = ["Zula <zinowiewa@yandex.ru>"]
packages = [
  { include = "gen_diff" },
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
  gendiff = "gen_diff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
