[tool.poetry]
name = "YuliaZZZ_Difference_generator"
version = "1.3.0"
description = "Generate differences"
classifiers = ["Topic :: Utilities"]
authors = ["Zula <zinowiewa@yandex.ru>"]
packages = [
  { include = "gen_diff" },
  ]

[[tool.poetry.source]] 
name =  'private' 
url =  'https://github.com/YuliaZZZ/python-project-lvl2'

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
  gendiff = "gen_diff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
